add connexion db

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+# Database Connection
 
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://postgresql-paulc.alwaysdata.net:5432/paulc_techweb
+spring.datasource.username=paulc_pamagace
+spring.datasource.password=ISEPTechWeb2022%@#
