--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,26 @@
-# Database Connection
+# ===============================
+# DATABASE CONNECTION
+# ===============================
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://postgresql-paulc.alwaysdata.net:5432/paulc_techweb
 spring.datasource.username=paulc_pamagace
 spring.datasource.password=ISEPTechWeb2022%@#
+
+
+# ===============================
+# JPA / HIBERNATE
+# ===============================
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
+# Fix Postgres JPA Error:
+# Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented.
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+
+
+
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
