--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,8 +4,8 @@
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://postgresql-paulc.alwaysdata.net:5432/paulc_techweb
-spring.datasource.username=paulc_pamagace
-spring.datasource.password=ISEPTechWeb2022%@#
+spring.datasource.username=paulc_techweb1
+spring.datasource.password=dede@$%123
 
 
 # ===============================
